--- a/Code_Manual/codemanual.tex
+++ b/Code_Manual/codemanual.tex
@@ -21,7 +21,7 @@
 
 \title{FeyPy: A Python package for visualizing and calculating nonlinear optical properties}
 
-\author{Adam Goler, Washington State University\\ adam.goler@email.wsu.edu}
+\author{Adam Goler \& Team Cobra\\ Washington State University\\ Nonlinear Optics Class, Spring 2014\\ adam.goler@email.wsu.edu}
 
 \begin{document}
 
